# hello_adc_manual

./: CMakeLists.txt  README.md  hello_adc_manual.c
.github/workflows/: ci.yml
test/: CMakeLists.txt  tests.c
